--- a/RiotApp/app/src/main/res/layout/activity_home.xml
+++ b/RiotApp/app/src/main/res/layout/activity_home.xml
@@ -1,18 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="rakiroad.riotapp.Home">
 
-    <TextView
+
+    <EditText
+        android:id="@+id/summonerName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:inputType="textPersonName"
+        android:paddingTop="20dp"
+        tools:layout_editor_absoluteX="83dp"
+        tools:layout_editor_absoluteY="182dp"
+        tools:text="Enter Summoner Name"
+        android:layout_above="@+id/editText2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp" />
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/editText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/selectRegion"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="45dp"
+        android:layout_marginTop="0dp"
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:inputType="none"
+        android:paddingTop="20dp"
+        android:text="Select Region" />
+
+    <Spinner
+        android:id="@+id/selectRegion"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="227dp"
+        android:gravity="center_horizontal"
+        android:paddingTop="20dp"
+        android:prompt="@string/Select_Region"
+        android:spinnerMode="dropdown"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="271dp" />
+
+    <Button
+        android:id="@+id/btnSearch"
+        android:text="Search"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp"
+
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:background="@drawable/button"
+        android:shadowColor="#A8A8A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/editText2"
+        android:layout_centerHorizontal="true" />
+
+
+</RelativeLayout>
