--- a/RiotApp/app/src/main/res/layout/activity_home.xml
+++ b/RiotApp/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/poro"
-    tools:context="rakiroad.riotapp.Home">
+    tools:context="rakiroad.riotapp.HomeActivity">
 
 
     <EditText
