--- a/RiotApp/app/src/main/res/layout/results_page.xml
+++ b/RiotApp/app/src/main/res/layout/results_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="rakiroad.riotapp.MMR_Results">
+    tools:context="rakiroad.riotapp.MMR_ResultsActivity">
 
     <ListView
         android:layout_width="368dp"
