--- a/RiotApp/app/src/main/res/values/colors.xml
+++ b/RiotApp/app/src/main/res/values/colors.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--
+
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color> -->
+    <color name="colorAccent">#FF4081</color>
 
-    <color name="colorPrimary">#2b8aff</color>
-    <color name="colorPrimaryDark">#1066b2</color>
-    <color name="colorAccent">#e2d40d</color>
+    <color name="primary">#1a2325</color>
+    <color name="primary_dark">#0f1317</color>
+    <color name="primary_darker">#040608</color>
+    <color name="accent">#FFFFFF</color>
+
+    <color name="butonText">#ba863c</color>
+
+    <color name="black">#000000</color>
+    <color name="jet">#222222</color>
+    <color name="oil">#333333</color>
+    <color name="monsoon">#777777</color>
+    <color name="jumbo">#888888</color>
+    <color name="aluminum">#999999</color>
+    <color name="base">#AAAAAA</color>
+    <color name="iron">#CCCCCC</color>
+    <color name="white">#FFFFFF</color>
 
     <color name="Gray1">#eaeaea</color>
 </resources>
