--- a/RiotApp/app/src/main/res/layout/activity_user_profile.xml
+++ b/RiotApp/app/src/main/res/layout/activity_user_profile.xml
@@ -6,10 +6,27 @@
     android:layout_height="match_parent"
     tools:context="rakiroad.riotapp.UserProfileActivity">
 
-    <ImageView
-        android:id="@+id/imgLeagueIcon"
-        android:layout_width="97dp"
-        android:layout_height="112dp"
-        tools:layout_editor_absoluteX="144dp"
-        tools:layout_editor_absoluteY="50dp" />
+    <LinearLayout
+        android:layout_width="128dp"
+        android:layout_height="495dp"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imgLeagueIcon"
+            android:layout_width="97dp"
+            android:layout_height="112dp"
+            android:layout_weight="1"
+            tools:layout_editor_absoluteX="144dp"
+            tools:layout_editor_absoluteY="50dp" />
+
+        <TextView
+            android:id="@+id/textViewSummoner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="memes"
+            tools:layout_editor_absoluteX="169dp"
+            tools:layout_editor_absoluteY="185dp" />
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
