--- a/RiotApp/app/src/main/res/layout/results_page.xml
+++ b/RiotApp/app/src/main/res/layout/results_page.xml
@@ -16,7 +16,19 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scaleType="centerInside"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
         app:srcCompat="@drawable/background" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="TextView" />
 
 </RelativeLayout>
